--- a/ex4.html
+++ b/ex4.html
@@ -11,19 +11,51 @@
 
    <input type="text" id="inputText">
    <!-- add a button here for adding new item -->
+   <button id="addBtn"> Enter</button>
 
    <ul>
-      <li>Notebook<!--<button>Delete</button></li>-->
-      <li>Jello</li>
-      <li>Spinach</li>
-      <li>Rice</li>
-      <li>Birthday Cake</li>
-      <li>Candles</li>
+      <li>Notebook<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Jello<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Spinach<<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Rice<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Birthday Cake<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Candles<button onclick="removeItem(this.parentNode)">Delete</button></li>
    </ul>
 
    <script>
 
       // add code here
+      const addButton = document.getElementById("addBtn")
+      addButton.addEventListener("click", addItem)
+
+      const ulElem = document.getElementsByTagName("ul")[0]
+
+
+      function addItem() {
+         var userInput = document.getElementById("inputText").value
+         let liElem = document.createElement("li")
+         liElem.innerText = userInput
+
+         // del button
+         let delButton = document.createElement("button")
+         // delButton.onclick = delItem;
+         // delButton.addEventListener("click", delItem)
+         delButton.innerText = "Delete"
+         delButton.addEventListener("click", function(){
+            this.parentNode.remove()
+         }) //must use function() as at this point the button element hasnt yet been recognised as part of the dom, so normal removeItem(delButton.parentNode) will not work
+         liElem.appendChild(delButton)
+         ulElem.appendChild(liElem)
+         
+      }
+
+      function removeItem(obj){
+         obj.remove()
+      }
+      function delItem() {
+         this.parentNode.remove()
+      }
+
 
    </script>
 
